<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include android:id="@+id/setting_toolbar" layout="@layout/header_toolbar"/>

    <com.xuemooc.edxapp.view.custom.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F2F2F2"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:padding="16dp">

                <TextView
                    android:id="@+id/settings_wifi_download_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_download_wifi_only"
                    android:textColor="@color/md_black_1000"
                    android:textSize="18sp" />

                <com.xuemooc.edxapp.view.custom.SlideSwitch
                    android:id="@+id/settings_wifi_download_only_switch"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    app:isOpen="true"
                    app:shape="circle"
                    app:themeColor="#f200aa96" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#BDBDBD" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:id="@+id/settings_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:padding="16dp">

                <TextView
                    android:id="@+id/settings_check_update_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_check_update"
                    android:textColor="@color/md_black_1000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/settings_check_update_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="V1.0.0"
                    android:textColor="@color/md_black_1000"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#BDBDBD" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:id="@+id/settings_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:padding="16dp">

                <TextView
                    android:id="@+id/settings_about_us_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_about_us"
                    android:textColor="@color/md_black_1000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/profile" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#BDBDBD" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:id="@+id/settings_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:padding="16dp">

                <TextView
                    android:id="@+id/settings_feedback_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_feedback"
                    android:textColor="@color/md_black_1000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/profile" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#BDBDBD" />

            <com.dd.CircularProgressButton
                android:id="@+id/settings_login_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cpb_selectorIdle="@color/logout"
                android:textColor="@color/md_white_1000"
                android:layout_margin="@dimen/text_padding"
                app:cpb_paddingProgress="10dp"
                app:cpb_textIdle="@string/setting_logout"/>
        </LinearLayout>
    </com.xuemooc.edxapp.view.custom.OverScrollView>
</LinearLayout>
